tests/ui/sized/unsized-binding.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-binding.rs:2:9
   |
LL |     let x = *"";
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
